--- a/style.css
+++ b/style.css
@@ -1,200 +1,239 @@
+/* Global Settings */
+* {
+	margin: 0;
+	padding: 0;
+
+	box-sizing: border-box;
+	font-family: 'Open Sans', sans-serif;
+	font-family: 'Oswald', sans-serif;
+}
+
+:root {
+
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
 
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	text-align: center;
-}
-
-body {
-	height: 100vh;
+/* Classes */
+.flex { 
 	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
 
-header,
-footer {
-	height: 5vh;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border: solid 2px;
-	border-radius: 8px;
-}
-
-main {
-	align-self: center;
-	height: 40vh;
-	width: 70vw;
-	display: flex;
-	flex-direction: column;
-	overflow: scroll;
-	border: solid 2px;
-	border-radius: 8px;
-	padding: 8px;
-	background-color: rgba(223, 227, 238, 1);
-
-}
-
-section {
-	height: 10vh;
-	display: flex;
-	justify-content: center;
-}
-
-section > div { 
-	width: 250px;
-	border:  solid 2px;
-	border-radius: 24px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-	transition: 100ms ease-in-out;
-}
-
-
-#add-icon {
-	padding: 4px;
-	font-size: 22pt;
-}
-
-#add-text {
-	font-size: 20pt;
-}
-#add-button:hover {
-	transform: scale(1.1);
-}
-
-.book-card {
-	display: flex;
-	border: solid 2px;
-	border-radius: 10px;
-	height: 20%;
 	align-items: center;
 	justify-content: space-between;
-	padding: 12px;
-	margin-bottom: 8px;
-	background-color: rgba(255, 255, 255, 1);
-
 }
 
-.book-info {
-	font-size: 12;
-	text-overflow: ellipsis;
-	text-align: left;
-}
-
-.delete-book {
-	cursor: pointer;
-}
-
-.book-card:hover{
-	transform: scale(1.01);
-}
-
-#modal {
-	background-color: rgba(249, 249, 249, 1);
-
-	position: fixed;
-
-	margin: 30vh 10vw;
-	
-	height: 40vh;
-	width: 80vw;
-	border: solid 2px;
-	border-radius: 6px;
-	filter: drop-shadow(0 0 10px #000000);
-	z-index: 1;
-}
-
-.modal-toggle {
+.modalToggle {
 	display: none;
 }
 
-#modal-form{
+.button {
+	background-image: radial-gradient(#000000,#ffffff);
+	background-size: 600% 600%;
+	filter: drop-shadow(0px 1px 0px #000000);
+
+	cursor: pointer;
+	
+	transition: 150ms ease-out;
+}
+
+.bookInfo {
+	font-size: 16pt;
+	border-right: solid 1px;
 	height: 100%;
-	align-items: center;
-	justify-content: center;
-	border: solid;
-	display: flex;
+	line-height: 2em;
+}
+
+
+/* Main Containers */
+#library {
+	height: 100vh;
+	width: 100vw;
+	
 	flex-direction: column;
+
+	background-image: linear-gradient(45deg, #000000,#ffffff, #000000);
+	background-size: 400% 400%;
 }
 
-#modal-form > * {
-	margin: 2px;
+#libraryHeader {
+	line-height: 10vh;
+	width: 100vw;
+	text-align: center;
+	font-size: 36pt;
+	
 }
 
-#modal-form > span {
-	font-size: 16pt;
-}
-
-#form-read{
-	display: flex;
-	align-items: center;
-	justify-content: flex-end;
-	width: 50%;
-	padding: 1%;
-	transform: scale(1.05);
-
-}
-
-#form-read > span {
-	font-size: 16pt;
-}
-
-#form-pages{
-	display: flex;
-	width: 70%;
-	align-items: center;
-	justify-content: center;
-}
-
-#form-pages > input{
+#libraryFooter {
+	line-height: 5vh;
+	width: 100vw;
+	text-align: center;
 	font-size: 14pt;
-	line-height: 1.6em;
-	width: 46%;
 }
 
-#form-pages > span {
-	font-size: 16pt;
-	text-align: justify;
-	text-align: right;
-	margin-left: 10px;
+#bookContainer {
+	height: 70vh;
+	width: 80vmin;
+	border: solid 2px #000000;
+	border-radius: 16px 0;
+	overflow: scroll;
+	background-image: linear-gradient(225deg, #ffffff, #000000);
+	background-size: 100% 500%;
+	padding: 4px;
+	filter: drop-shadow(0px 0px 4px #000000);
 }
 
-#form-pages > div {
-	width: 25%;
+/* Book Card */
+#bookCard {
+	display: grid;
+	grid-template-columns: 2fr 10fr 48px;
+
+	align-items: center;
+	margin: 4px 4px 8px 4px;
+	padding: 8px;
+
+	border: solid 2px #000000;
+	border-radius: 8px;
+
+	background-image: linear-gradient(#ffffff, #000000);
+	background-size: 400% 400%;
+
+	filter: drop-shadow(2px 2px 2px #000000);
 }
 
-input[type="text"]{
-	width: 50%;
-	height: 10%;
-	font-size: 16pt;
+.bookStatusContainer {
+	flex-direction: column;
+	border-right: solid 1px;
+	padding-right: 8px;
 }
 
-input[type="checkbox"] {
-	transform: scale(1.3);
-	margin-right: 6%;
+.bookStatus {
+	width: 100%;
+	text-align: center;
+	padding: 4px;
+	font-size: 14pt;
 }
 
-#modal-close {
-	position: fixed;
-	left: 0;
-	padding: 10px;
-	transform: scale(1.8);
+#bookInfo {
+	padding: 8px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	
+}
+
+#toggleBook {
+	height: 54px;
+	width: 54px;
+	font-size: 24pt;
+	border-radius: 25%;
+}
+
+#deleteBook {
+	height: 42px;
+	width: 42px;
+	align-self: center;
+	justify-self: center;
+	border-radius: 50%;
+	font-size: 18pt;
+	justify-self: end;
+}	
+
+/* Add Book Button */
+#addBookLabel {
+	padding: 8px;
+	border: solid 2px;
+	border-radius: 8px 0;
+
+	background-image: linear-gradient(45deg,#000000,#ffffff, #000000);
+	background-size: 250% 450%;
+
+	filter: drop-shadow(0px 2px 4px #000000);
+
 	cursor: pointer;
 }
 
-#modal-submit {
-	position: fixed;
+#addBookButton {
+	height: 32px;
+	width: 32px;
+
+	margin-right: 8px;
+
+	border-radius: 50%;
+}
+
+/* Form Modal */
+#formModal {
+	height: 80vh;
+	width: 90vmin;
+
+	flex-direction: column;
+	justify-content: center;
+	position: absolute;
+	top: 10vh;
+
+	border: solid 1px;
+	border-radius: 16px 0;
+
+	background-image: linear-gradient(215deg, #ffffff, #000000);
+	background-size: 100% 400%;
+
+	filter: drop-shadow(0px 0px 16px #000000);
+}
+
+#formClose {
+	position: absolute;
+	top: 0;
+	left: 0;
+	margin: 8px;
+	border-radius: 50%;
+	height: 48px;
+	width: 48px;
+	font-size: 28pt;
+}
+
+#formSubmitButton {
+	position: absolute;
 	bottom: 0;
 	right: 0;
-	cursor: pointer;
-	transform: scale(2.5);
-	padding: 2%;
+	margin: 8px;
+	border-radius: 25%;
+	height: 92px;
+	width: 92px;
+	font-size: 48pt;
+}
+
+#formReadLabel {
+	height: 54px;
+	width: 150px;
+	margin: 8px;
+	justify-content: center;
+	font-size: 25pt;
+}
+
+#formReadBox {
+	margin-right: 8px;
+	height: 28px;
+	width: 28px;
+}
+
+.formField {
+	height: 10%;
+	width: 75%;
+	margin: 8px;
+	padding: 32px;
+	border-radius: 32px;
+	text-align: center;
+	font-size: 16pt;
+}
+
+/* Book Modal */
+
+
+/* Animations */
+@keyframes backgroundFlow {
+	0% { background-position: 0% 50%; }
+	50% { background-position: 100% 50%; } 
+	100% { background-position: 0% 50%; }
 }
